[project]
name = "pubsub-shadow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.1",
    "networkx>=3.4.2",
    "pydantic>=2.11.4",
    "pyyaml>=6.0.2",
]

[dependency-groups]
dev = [
    "ruff>=0.11.9",
]
