[package]
name = "testplan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.0"
if-addrs = "0.7.0"
ipnetwork = { version = "0.18.0", default-features = false, features = ["serde"] }
soketto = "0.7.1"
async-std = { version = "1.10", features = [ "attributes", "tokio1" ] }
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
thiserror = "1"
testground = { git = "https://github.com/mxinden/sdk-rust", branch = "shutdown", version = "0.2.0" }
libp2p = "0.44.0" # TODO: Figure out how to make this easy to override.