[project]
name = "py-libp2p-gossip-interop"
version = "0.1.0"
description = "Python implementation for GossipSub interoperability testing"
authors = [
    {name = "py-libp2p contributors"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "libp2p >= 0.4.0",
    "trio >= 0.22.0",
    "multiaddr >= 0.0.9",
    "base58 >= 2.1.0",
]

[project.scripts]
py-libp2p-gossip = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
