[package]
name = "rust-libp2p-gossip"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.33.0", features = ["full"] }
futures = "0.3.28"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
clap = { version = "4.4.4", features = ["derive"] }
log = "0.4.20"
time = "0.3.41"
slog = "2.7.0"
sha2 = "0.10.9"
slog-json = "2.6.1"
slog-term = "2.9.0"
slog-async = "2.8.0"
dns-lookup = "2.0.2"
byteorder = "1.4.3"
hostname = "0.3.1"
ed25519-dalek = "1.0.1"
thiserror = "2.0.12"

[dependencies.libp2p]
features = [
    "dns",
    "tcp",
    "tokio",
    "noise",
    "macros",
    "websocket",
    "identify",
    "yamux",
]
# version = "0.56.0"
git = "https://github.com/jxs/rust-libp2p/"
branch = "gossipsub-partial-messages"

[dependencies.libp2p-gossipsub]
git = "https://github.com/jxs/rust-libp2p/"
branch = "gossipsub-partial-messages"
features = ["partial_messages"]
