[package]
name = "relay"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
env_logger = "0.10.0"
libp2p = { git = "https://github.com/Prabhat1308/rust-libp2p.git", branch = "fix/return-limit-to-dialer", features = [
    "tokio",
    "relay",
    "ed25519",
    "quic",
    "tcp",
    "yamux",
    "noise",
    "macros",
    "identify",
    "ping",
] }
log = "0.4.19"
redis = { version = "0.23.0", default-features = false, features = [
    "tokio-comp",
] }
tokio = { version = "1.38", features = ["rt-multi-thread", "macros"] }
