[package]
edition = "2021"
name = "testplan"
version = "0.2.0"

[dependencies]
anyhow = "1"
async-trait = "0.1.58"
env_logger = "0.9.0"
futures = "0.3.1"
if-addrs = "0.7.0"
log = "0.4"
redis = { version = "0.22.1", features = ["tokio-native-tls-comp", "tokio-comp"] }
tokio = { version = "1.24.1", features = ["full"] }

libp2pv0500 = { package = "libp2p", version = "0.50.0", features = ["websocket", "quic", "mplex", "yamux", "tcp", "tokio", "ping", "noise", "tls", "dns", "rsa", "macros"] }

