[package]
edition = "2021"
name = "testplan"
version = "0.1.0"

[dependencies]
async-trait = "0.1.58"
anyhow = "1"
async-std = { version = "1.10", features = ["attributes", "tokio1"] }
env_logger = "0.9.0"
if-addrs = "0.7.0"
log = "0.4"
rand = "0.8"
serde_json = "1"
soketto = "0.7.1"
testground = "0.4.0"
thiserror = "1"
tokio = { version = "1", default-features = false, features = ["sync", "rt-multi-thread", "macros", "net"] }
tokio-stream = { version = "0.1", default-features = false, features = [] }
tokio-util = { version = "0.7", default-features = false, features = ["compat"] }
futures = "0.3.1"

libp2pv0440 = { package = "libp2p", version = "0.44.0", default_features = false, features = ["websocket", "mplex", "yamux", "tcp-async-io", "ping", "noise", "dns-async-std"] }
libp2pv0451 = { package = "libp2p", version = "0.45.1", default_features = false, features = ["websocket", "mplex", "yamux", "tcp-async-io", "ping", "noise", "dns-async-std"] }
libp2pv0461 = { package = "libp2p", version = "0.46.1", default_features = false, features = ["websocket", "mplex", "yamux", "tcp-async-io", "ping", "noise", "dns-async-std"] }
libp2pv0470 = { package = "libp2p", version = "0.47.0", default_features = false, features = ["websocket", "mplex", "yamux", "tcp-async-io", "ping", "noise", "dns-async-std"] }
libp2pv0480 = { package = "libp2p", version = "0.48.0", default_features = false, features = ["websocket", "mplex", "yamux", "tcp-async-io", "ping", "noise", "dns-async-std", "rsa"] }
libp2pv0490 = { package = "libp2p", version = "0.49.0", features = ["websocket", "mplex", "yamux", "tcp", "async-std", "ping", "noise", "dns", "rsa"] }

# Next release
[dependencies."libp2pv0500"]
package = "libp2p"
git = "https://github.com/libp2p/rust-libp2p"
rev = "368705a1465c4322948d14ee46d42475c472ca1e" # This should usually point to a commit on master.
features = ["websocket", "mplex", "yamux", "tcp", "ping", "noise", "dns", "async-std", "rsa", "macros"]
