[package]
edition = "2021"
name = "interop-tests"
version = "0.1.0"
publish = false

[dependencies]
anyhow = "1"
either = "1.8.0"
env_logger = "0.10.0"
futures = "0.3.26"
libp2p = { version = "0.51.0", features = ["yamux", "tcp", "tokio", "ping", "noise", "dns", "rsa", "macros", "relay"] }
log = "0.4"
rand = "0.8.5"
redis = { version = "0.22.1", default-features = false, features = ["tokio-comp"] }
tokio = { version = "1.24.1", features = ["full"] }
