[package]
name = "perf-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1", features = [
  "io-util",
  "macros",
  "net",
  "rt-multi-thread",
  "signal",
  "time",
] }

# libp2p core and transports
libp2p = { version = "0.56", features = [
  "dns",
  "macros",
  "noise",
  "quic",
  "request-response",
  "rsa",
  "tcp",
  "tls",
  "tokio",
  "websocket",
  "yamux",
] }

# libp2p mplex implementation (deprecated; for backwards compatibility testing)
libp2p-mplex = { version = "0.43.1" }

# libp2p webrtc implementation (alpha; for forwards compatibility testing)
libp2p-webrtc = { version = "0.9.0-alpha.1", features = [ "tokio" ] }

# Error handling
anyhow = "1.0"

# Async traits
async-trait = "0.1"

# Futures utilities
futures = "0.3"

# Random number generation
rand = "0.8.5"

# Redis coordination
redis = { version = "1.0", features = [ "tokio-comp" ] }

# Strings and Enums macros
strum = { version = "0.27", features = [ "derive" ]}
