[package]
name = "perf-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
# Minimal dependencies for a working perf implementation
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "macros", "time", "signal"] }
clap = { version = "4", features = ["derive"] }
serde_yaml = "0.9"
redis = { version = "0.27", features = ["tokio-comp"] }
