[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "py-libp2p-ping-test"
version = "0.2.9"
description = "Python libp2p ping test implementation for transport interoperability"
authors = [
    {name = "libp2p", email = "team@libp2p.io"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "libp2p @ git+https://github.com/libp2p/py-libp2p.git@f13876a64f5daeaec45c0e4e1ac0ca7741df60e4",
    "redis>=4.0.0",
    "typing-extensions>=4.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ping_test*"]

 
