[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "py-libp2p-ping-test"
version = "0.4.0"
description = "Python libp2p ping test implementation for transport interoperability"
authors = [
    {name = "libp2p", email = "team@libp2p.io"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "libp2p @ git+https://github.com/libp2p/py-libp2p.git@e2c37df531cc4f5fdcf1b68ac642edb420531cc3",
    "redis>=4.0.0",
    "typing-extensions>=4.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ping_test*"]

 
